--- a/12Mart2022/Views/Departman/Index.cshtml
+++ b/12Mart2022/Views/Departman/Index.cshtml
@@ -23,7 +23,7 @@
                 <th>@departman.Id</th>
                 <th>@departman.Ad</th>
                 <th><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle </a></th>
-                <th><a class="btn btn-primary" href="/Departman/Sil/@departman.Id">Sil </a></th>
+                <th><a class="btn btn-warning" href="/Departman/Sil/@departman.Id">Sil </a></th>
 
 
             </tr>
