--- a/12Mart2022/Views/Shared/_Layout.cshtml
+++ b/12Mart2022/Views/Shared/_Layout.cshtml
@@ -15,12 +15,12 @@
 </head>
 <body>
     @Html.Partial("_Navbar")
-    <div>
+    <div class="container">
         @RenderBody()
     </div>
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
 
-    <script src="~/Scripts/DataTables/dataTables.bootstrap4.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap4.js"></script>
     <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
     <script src="~/Scripts/custom.js"></script>
