--- a/12Mart2022/Views/Personel/PersonelForm.cshtml
+++ b/12Mart2022/Views/Personel/PersonelForm.cshtml
@@ -2,43 +2,50 @@
 
 @{
     ViewBag.Title = "PersonelForm";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-@Html.ValidationSummary()
+
 <h2>Personel Formu</h2>
+
+@Html.ValidationSummary()
 
 @using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
 {
 
 
 
-<div class="form-group">
+    <div class="form-group">
         @Html.LabelFor(m => m.Personel.Ad)
         @Html.TextBoxFor(m => m.Personel.Ad, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Personel.Ad)
-</div>
-<div class="form-group">
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Personel.Soyad)
         @Html.TextBoxFor(m => m.Personel.Soyad, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Personel.Soyad)
-</div>
-<div class="form-group">
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Personel.DepartmanId)
         @Html.DropDownListFor(m => m.Personel.DepartmanId, new SelectList(Model.Departmanlar, "Id", "Ad"), "Departman Seçiniz", new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Personel.DepartmanId)
-</div>
+    </div>
 
-<div class="form-group">
+    <div class="form-group">
         @Html.LabelFor(m => m.Personel.Maas)
         @Html.TextBoxFor(m => m.Personel.Maas, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Personel.Maas)
-</div>
-<div class="form-group">
+    </div>
+    <div class="form-group">
         @Html.LabelFor(m => m.Personel.DogumTarihi)
-        @Html.TextBoxFor(m => m.Personel.DogumTarihi, "{0:yyyy-MM-dd}", new { @class = "form-control",
-       type = "date",onchange="CheckDateTypeIsValıd(this)" })
+        @Html.TextBoxFor(m => m.Personel.DogumTarihi, "{0:yyyy-MM-dd}", new
+        {
+            @class = "form-control",
+       type = "date",
+            onchange = "CheckDateTypeIsValıd(this)"
+        })
         @Html.ValidationMessageFor(m => m.Personel.DogumTarihi)
-</div>
-<div class="radio">
+    </div>
+    <div class="radio">
         <label>
             @Html.RadioButtonFor(m => m.Personel.Cinsiyet, true) Erkek
         </label>
@@ -46,17 +53,18 @@
             @Html.RadioButtonFor(m => m.Personel.Cinsiyet, false) Kadın
         </label>
         @Html.ValidationMessageFor(m => m.Personel.Cinsiyet)
-</div>
+    </div>
 
-<div class="checkbox">
+    <div class="checkbox">
         <label>
             @Html.CheckBoxFor(m => m.Personel.EvliMi, true) Evliyseniz seçiniz
         </label>
-</div>
+    </div>
     @Html.HiddenFor(m => m.Personel.Id)
     <button type="submit" class="btn btn-default">Kaydet </button>
 
 }
+
 @section scripts{
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
