--- a/12Mart2022/Views/Shared/_Layout.cshtml
+++ b/12Mart2022/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
         @RenderBody()
     </div>
     <script src="~/Scripts/jquery-1.9.1.min.js"></script>
-
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/DataTables/dataTables.bootstrap4.js"></script>
     <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
