--- a/12Mart2022/Views/Departman/Index.cshtml
+++ b/12Mart2022/Views/Departman/Index.cshtml
@@ -14,6 +14,7 @@
             <th>Ad</th>
             <th>Güncelle</th>
             <th>Sil</th>
+            <th>Personelleri Listele</th>
         </tr>
     </thead>
     <tbody>
@@ -24,6 +25,11 @@
                 <th>@departman.Ad</th>
                 <th><a class="btn btn-primary" href="/Departman/Guncelle/@departman.Id">Güncelle </a></th>
                 <th><a class="btn btn-warning btnDepartmanSil" data-id="@departman.Id">Sil </a></th>
+                @*<th>@Html.ActionLink("Personelleri Göster","PersonelleriListele","Personel"
+                   ,new {id=departman.Id}, new {@class="btn btn-primary"})</th>*@
+                <th>@Ajax.ActionLink("Personelleri Göster","PersonelleriListele","Personel"
+                   ,new {id = departman.Id },new AjaxOptions {HttpMethod="GET",UpdateTargetId="personelListesi" }
+                   ,new {@class="btn btn-primary"})</th>
 
 
             </tr>
@@ -32,3 +38,5 @@
     </tbody>
 
 </table>
+
+<div id="personelListesi"></div>
