--- a/12Mart2022/Views/Personel/PersonelForm.cshtml
+++ b/12Mart2022/Views/Personel/PersonelForm.cshtml
@@ -9,7 +9,10 @@
 
 @Html.ValidationSummary()
 
-@using (Html.BeginForm("Kaydet", "Personel", FormMethod.Post))
+<div id="mesaj"></div>
+@*@using (Ajax.BeginForm("Kaydet", "Departman", new AjaxOptions { HttpMethod = "POST", UpdateTargetId = "mesaj" }))*@
+
+@using (Ajax.BeginForm("Kaydet", "Personel", new AjaxOptions {HttpMethod="POST",UpdateTargetId="mesaj" }))
 {
 
 
